--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,3 @@
+*tiles=*/compressmap\.sh
 
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=osm-de/map18-191105-2025\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=mapnik/map18-191105-2057\.png
-
-xmin=136367&xmax=136446&ymin=86979&ymax=87058&zoom=18&scale=256&tiles=toner/map18-191106-0116\.png
-
-xmin=136376&xmax=136439&ymin=86987&ymax=87050&zoom=18&scale=256&tiles=mapnik/map18-191106-0113\.png
-
-xmin=136376&xmax=136439&ymin=86987&ymax=87050&zoom=18&scale=256&tiles=toner/map18-191106-0114\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=cyclemap/map18-191105-2312\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=hikebike/map18-191105-2345\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=humanitarian/map18-191105-2318\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=kosmosnimki/map18-191106-0029\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=landscape/map18-191105-2348\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=mapsurfer/map18-191105-2300\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=osm-fr/map18-191105-2257\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=outdoors/map18-191105-2351\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=sputnik/map18-191106-0019\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=toner/map18-191105-2358\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=toner-lite/map18-191106-0002\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=topomap/map18-191106-0031\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=transport/map18-191105-2340\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=veloroad/map18-191106-0022\.png
-
-xmin=136388&xmax=136427&ymin=86999&ymax=87038&zoom=18&scale=256&tiles=watercolor/map18-191106-0018\.png
-
-xmin=68172&xmax=68235&ymin=43478&ymax=43541&zoom=17&scale=256&tiles=toner/map17-191106-0211\.png
-
-xmin=34070&xmax=34133&ymin=21723&ymax=21786&zoom=16&scale=256&tiles=toner/map16-191106-0648\.png
+*tiles=*/map*\.png\.bak
